--- a/validator/templates/validator/datasets.html
+++ b/validator/templates/validator/datasets.html
@@ -49,7 +49,7 @@
                                     {% for version in dataset.versions.all %} <li>{{ version.pretty_name }}: {{ version.help_text }}</li> {% endfor %}
                                 </ul>
                             </td>
-                            <td>{{ dataset.time_range_covered }}</td>
+                            <td>{{ dataset.time_range_covered |safe}}</td>
                             <td>{{ dataset.source_reference |safe }}</td>
                             <td>{{ dataset.citation |safe }}</td>
                             <td>
