--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -18,7 +18,7 @@
                                 {% if valrun.is_near_expiry %}
                                     <span class="fas fa-bomb" title="This validation will SOON be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
                                 {% else %}
-                                    <span class="fas fa-calendar" title="This validation will be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
+                                    <span class="fas fa-hourglass-half" title="This validation will be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
                                 {% endif %}
                             {% else %}
                                 {% if not valrun.end_time %}
@@ -77,7 +77,7 @@
                                     {% endif %}
                                     <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}')"><span class="fas fa-times"></span></button>
                                     {% if valrun.is_archived %}
-                                        <button class="btn btn-sm btn-primary btn-action" title="Un-archive" onclick="ajax_archive_result('{{ valrun.id }}', false)"><span class="fas fa-calendar"></span></button>
+                                        <button class="btn btn-sm btn-primary btn-action" title="Un-archive" onclick="ajax_archive_result('{{ valrun.id }}', false)"><span class="fas fa-hourglass-half"></span></button>
                                     {% else %}
                                         <button class="btn btn-sm btn-primary btn-action" title="Extend lifespan" onclick="ajax_extend_result('{{ valrun.id }}', true)"><span class="fas fa-calendar-plus"></span></button>
                                         <button class="btn btn-sm btn-primary btn-action" title="Archive" onclick="ajax_archive_result('{{ valrun.id }}', true)"><span class="fas fa-archive"></span></button>
