Re-use result buttons across pages

--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -1,4 +1,5 @@
 {% extends 'common/base.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -128,79 +129,12 @@
 {% endblock %}
 
 {% block javascript %}
-    <script>
-        function ajax_delete_result(result_id) {
-            if (!confirm('Do you really want to delete the result?')) {
-                   return;
-               }
-            var url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}".replace('00000000-0000-0000-0000-000000000000',result_id);
-
-            $.ajaxSetup({
-                  headers: { "X-CSRFToken": '{{csrf_token}}' }
-            });
-
-            $.ajax({
-                url: url,
-                type: 'DELETE',
-                success: function (return_data) { $('#result_row_'+result_id).remove() }
-            });
-        }
-
-        function ajax_stop_validation(result_id) {
-            if (!confirm('Do you really want to stop the validation?')) {
-                return;
-            }
-            var url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}".replace('00000000-0000-0000-0000-000000000000', result_id);
-
-            $.ajaxSetup({
-                headers : { "X-CSRFToken" : '{{csrf_token}}' }
-            });
-
-            $.ajax({
-                url : url,
-                type : 'DELETE',
-                success : function(return_data) { location.reload(); }
-            });
-        }
-
-        function ajax_archive_result(result_id, archive) {
-            if (!confirm('Do you want to '+ (archive ? 'archive' : 'un-archive') +' the result'+ (archive ? '' : ' (allow auto-cleanup)') +'?')) {
-                   return;
-               }
-            var url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}".replace('00000000-0000-0000-0000-000000000000',result_id);
-
-            $.ajaxSetup({
-                  headers: { "X-CSRFToken": '{{csrf_token}}' }
-            });
-
-            $.ajax({
-                url: url,
-                type: 'PATCH',
-                data : { "archive" : archive },
-                success : function(return_data) { location.reload(); }
-            });
-        }
-
-        function ajax_extend_result(result_id) {
-            if (!confirm('Do you want to extend the lifespan of this result?')) {
-                   return;
-               }
-            var url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}".replace('00000000-0000-0000-0000-000000000000',result_id);
-
-            $.ajaxSetup({
-                  headers: { "X-CSRFToken": '{{csrf_token}}' }
-            });
-
-            $.ajax({
-                url: url,
-                type: 'PATCH',
-                data : { "extend" : true },
-                success : function(return_data) {
-                    var newExpiry = new Date(return_data);
-                    alert('The expiry date of your validation has been shifted to ' + newExpiry.toLocaleDateString())
-                    location.reload();
-                }
-            });
-        }
+    <script type="text/javascript">
+        csrf_token = '{{csrf_token}}';
+        archive_result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
+        delete_result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
+        stop_validation_url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}";
+        extend_result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
     </script>
+    <script src="{% static 'js/results_buttons.js' %}"></script>
 {% endblock %}
