--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -17,7 +17,7 @@
                         <h5 class="my-0" style="float: left">
                             {% if valrun.expiry_date %}
                                 {% if valrun.is_near_expiry %}
-                                    <span class="fas fa-bomb" title="This validation will SOON be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
+                                    <span class="fas fa-exclamation-triangle" title="This validation will SOON be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
                                 {% else %}
                                     <span class="fas fa-calendar-alt" title="This validation will be automatically removed during cleanup on {{ valrun.expiry_date }}."></span>
                                 {% endif %}
